issue: add padding on top of modal on mobile device

--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -31,7 +31,7 @@
 .modalDialog > div {
     width: 90vw;
     position: relative;
-    margin: 5% auto;
+    margin: 15% auto;
     padding: 2%;
     color: rgba($white, .7);
     text-align: center;
@@ -40,9 +40,9 @@
     color: rgba($white, .7);
     line-height: 25px;
     position: absolute;
-    right: -12px;
+    right: -0px;
     text-align: center;
-    top: -10px;
+    top: -30px;
     width: 24px;
     text-decoration: none;
     font-weight: bold;
@@ -54,7 +54,11 @@
 @media (min-width: 768px) {
 	.modalDialog > div {
 	width: 80vw;
+  margin: 5% auto;
 	}
+  .close {
+    top: -10px;
+  }
 }
 
 /* modal slidershow
@@ -244,7 +248,7 @@ article img{max-width:100%;height: auto;width:auto;max-height:90%;}
 #slides-email{position:relative;padding:2px;margin:1em 0}
 // Caption Modified by Helen Mar 7
 .caption{line-height:20px;margin:0 0 0%;position:absolute;bottom: 0%;padding:0px;opacity:0;color:#fff;text-transform:none;font-family:'Roboto', sans-serif;text-align:center;font-size:.8em;}
-.caption bar{display:inline-block;padding:10px;background:#000;border-radius:3px 3px 3px 3px;opacity:0.7;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=70)}
+.caption bar{display:inline-block;padding:10px;background:darken($primary-blue, 30%);border-radius:3px 3px 3px 3px;opacity:0.7;filter:progid:DXImageTransform.Microsoft.Alpha(opacity=70)}
 h3.text {
   font-size: 1.25em;
   font-weight: normal;
