--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -176,7 +176,7 @@ p.sldier-text {
 /* button
 =============================================== */
 .button {
-  background-color: $secondary-blue;
+  background-color: $primary-blue;
   border: none;
   color: #FFFFFF;
   text-align: center;
